# magnify

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  commands.rs  connections.rs  errors.rs  lib.rs  main.rs
