[package]
name = "mgfy"
version = "0.1.0"
edition = "2024"

description = "A command line tool for inspecting MongoDB"
license = "MIT"
repository = "https://github.com/jvarey/mgfy"
readme = "README.md"

[[bin]]
name = "mgfy"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
clap = { version = "4.6.0", features = ["derive"] }
mongodb = { version = "3.5.2", features = ["sync"] }
tabled = "0.20.0"
serde_json = "1.0.149"
directories = "6.0.0"

